--- a/index.html
+++ b/index.html
@@ -27,6 +27,37 @@
         <figcaption class="lead__image-caption">ваша полка — верхняя</figcaption>
       </figure>
     </section>
+    <section class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__subtitle">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+        но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
+        Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
+        увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например,
+        Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20
+        тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
+        отпуска.</p>
+      <ul class="intro__list">
+        <li class="intro__list-item">Часовых поясов 11</li>
+        <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
+        <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
+        <li class="intro__list-item">Природных заповедников 105</li>
+        <li class="intro__list-item">Аэропортов 241</li>
+      </ul>
+    </section>
+    <section class="photo-grid">
+      <img src="./images/photo-grid-train.jpg" alt="" class="photo-grid__item">
+      <img src="./images/photo-grid-atharva-tulsi.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-tuman.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-sochi.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-arisa.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-baikal.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-elbrus.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-kondratiev.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-kamchatka-1.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-kamchatka-2.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-baikal-2.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-ergaki.jpg" alt="" class="photo-grid__item">
+    </section>
   </main>
 </div>
 
