--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li class="intro__list-item">Аэропортов 241</li>
         </ul>
       </section>
-      <section class="photo-grid">
+      <div class="photo-grid">
         <img src="./images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
         <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Облака" class="photo-grid__item">
         <img src="images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__item">
@@ -58,8 +58,8 @@
         <img src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo-grid__item">
         <img src="images/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo-grid__item">
         <img src="images/photo-grid-ergaki.jpg" alt="Ержаки" class="photo-grid__item">
-      </section>
-      <section class="places">
+      </div>
+      <div class="places">
         <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
@@ -147,7 +147,7 @@
               земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
         </article>
-      </section>
+      </div>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
