finished project v1.4 with images_webp_min

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__figure">
-          <img class="lead__image" src="./images/lead-polka.jpg" alt="Полка купе">
+          <img class="lead__image" src="./images/images_webp_min/lead-polka.webp" alt="Полка купе">
           <figcaption class="lead__image-caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
@@ -46,18 +46,18 @@
         </ul>
       </section>
       <div class="photo-grid">
-        <img src="./images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
-        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Облака" class="photo-grid__item">
-        <img src="images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__item">
-        <img src="images/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__item">
-        <img src="images/photo-grid-arisa.jpg" alt="Лес" class="photo-grid__item">
-        <img src="images/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__item">
-        <img src="images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
-        <img src="images/photo-grid-kondratiev.jpg" alt="Конратьевка" class="photo-grid__item">
-        <img src="images/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo-grid__item">
-        <img src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo-grid__item">
-        <img src="images/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo-grid__item">
-        <img src="images/photo-grid-ergaki.jpg" alt="Ержаки" class="photo-grid__item">
+        <img src="./images/images_webp_min/photo-grid-train.webp" alt="Поезд" class="photo-grid__item">
+        <img src="./images/images_webp_min/photo-grid-atharva-tulsi.webp" alt="Облака" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-tuman.webp" alt="Туман" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-sochi.webp" alt="Сочи" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-arisa.webp" alt="Лес" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-baikal.webp" alt="Байкал" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-elbrus.webp" alt="Эльбрус" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-kondratiev.webp" alt="Конратьевка" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-kamchatka-1.webp" alt="Камчатка-1" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-kamchatka-2.webp" alt="Камчатка-2" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-baikal-2.webp" alt="Байкал-2" class="photo-grid__item">
+        <img src="images/images_webp_min/photo-grid-ergaki.webp" alt="Ержаки" class="photo-grid__item">
       </div>
       <div class="places">
         <article class="place">
@@ -66,7 +66,7 @@
             <span class="place__url-heading">url</span>
             <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
           </div>
-          <img src="images/place-kosa.jpg" alt="Куршская коса" class="place__image">
+          <img src="images/images_webp_min/place-kosa.webp" alt="Куршская коса" class="place__image">
           <div class="place__description-wrap">
             <p class="place__description">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
@@ -85,7 +85,7 @@
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National
               Geographic</a>
           </div>
-          <img src="images/place-kolsky.jpg" alt="Кольский" class="place__image">
+          <img src="images/images_webp_min/place-kolsky.webp" alt="Кольский" class="place__image">
           <div class="place__description-wrap">
             <p class="place__description">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
               которой
@@ -103,7 +103,7 @@
             <span class="place__url-heading">url</span>
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
           </div>
-          <img src="images/place-altai.jpg" alt="Алтай" class="place__image">
+          <img src="images/images_webp_min/place-altai.webp" alt="Алтай" class="place__image">
           <div class="place__description-wrap">
             <p class="place__description">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если
               ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в
@@ -121,7 +121,7 @@
             <span class="place__url-heading">url</span>
             <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
           </div>
-          <img src="images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
+          <img src="images/images_webp_min/place-winter-baikal.webp" alt="Зимний Байкал" class="place__image">
           <div class="place__description-wrap">
             <p class="place__description">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это
               самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -137,7 +137,7 @@
             <span class="place__url-heading">url</span>
             <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
           </div>
-          <img src="images/place-karelia.jpg" alt="Карелия" class="place__image">
+          <img src="images/images_webp_min/place-karelia.webp" alt="Карелия" class="place__image">
           <div class="place__description-wrap">
             <p class="place__description">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
               лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
