finished project v1.6 change sait description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="3-я проектная работа Цверкунова Ивана на Яндекc.Практикум">
+  <meta name="description" content="Россия - больше, чем кажется!">
   <meta name="keywords" content="Путешествие по России">
   <meta name="author" content="Цверкунов Иван">
   <title>Путешествие по России</title>
