finished project v1.9 first chang after review

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
           20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
           отпуска.</p>
         <ul class="intro__list">
-          <li class="intro__list-item">Часовых поясов 11</li>
-          <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-          <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-          <li class="intro__list-item">Природных заповедников 105</li>
-          <li class="intro__list-item">Аэропортов 241</li>
+          <li class="intro__list-item">Часовых поясов <span class="intro__span-accent">11</span></li>
+          <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+          <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+          <li class="intro__list-item">Природных заповедников <span class="intro__span-accent">105</span></li>
+          <li class="intro__list-item">Аэропортов <span class="intro__span-accent">241</span></li>
         </ul>
       </section>
-      <div class="photo-grid">
+      <section class="photo-grid">
         <img src="./images/images_webp_min/photo-grid-train.webp" alt="Поезд" class="photo-grid__item">
         <img src="./images/images_webp_min/photo-grid-atharva-tulsi.webp" alt="Облака" class="photo-grid__item">
         <img src="images/images_webp_min/photo-grid-tuman.webp" alt="Туман" class="photo-grid__item">
@@ -58,13 +58,13 @@
         <img src="images/images_webp_min/photo-grid-kamchatka-2.webp" alt="Камчатка-2" class="photo-grid__item">
         <img src="images/images_webp_min/photo-grid-baikal-2.webp" alt="Байкал-2" class="photo-grid__item">
         <img src="images/images_webp_min/photo-grid-ergaki.webp" alt="Ержаки" class="photo-grid__item">
-      </div>
-      <div class="places">
+      </section>
+      <section class="places">
         <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <span class="place__url-heading">url</span>
-            <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+            <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
           </div>
           <img src="images/images_webp_min/place-kosa.webp" alt="Куршская коса" class="place__image">
           <div class="place__description-wrap">
@@ -82,7 +82,7 @@
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <span class="place__url-heading">url</span>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__link">National
               Geographic</a>
           </div>
           <img src="images/images_webp_min/place-kolsky.webp" alt="Кольский" class="place__image">
@@ -101,7 +101,7 @@
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <span class="place__url-heading">url</span>
-            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
+            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__link">Facebook</a>
           </div>
           <img src="images/images_webp_min/place-altai.webp" alt="Алтай" class="place__image">
           <div class="place__description-wrap">
@@ -119,7 +119,7 @@
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <span class="place__url-heading">url</span>
-            <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+            <a href="https://vk.com/baikalmile" target="_blank" class="place__link">https://vk.com/baikalmile</a>
           </div>
           <img src="images/images_webp_min/place-winter-baikal.webp" alt="Зимний Байкал" class="place__image">
           <div class="place__description-wrap">
@@ -135,7 +135,7 @@
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <span class="place__url-heading">url</span>
-            <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+            <a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
           </div>
           <img src="images/images_webp_min/place-karelia.webp" alt="Карелия" class="place__image">
           <div class="place__description-wrap">
@@ -147,7 +147,7 @@
               земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
         </article>
-      </div>
+      </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
