--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </article>
       </section>
       <section class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
@@ -159,11 +159,11 @@
     </main>
     <footer class="footer">
       <nav class="footer__links">
-        <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-        <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-        <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-        <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-        <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+        <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+        <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
+        <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+        <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
+        <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
       </nav>
       <p class="footer__copyright">&copy; 2021. Ivan Tsverkunov</p>
     </footer>
